# confidential-token-broker

./: .gitmodules  Instruction.md  Makefile  README.md  README.zh_CN.md
.github/workflows/: ospp-2023-ctb.yml
app/: Cargo.toml  build.rs
app/src/: main.rs
client/: Cargo.toml  build.rs  cert.pem  key.pem
client/src/: main.rs
doc/: design document.md  design document.zh_CN.md
enclave/: Cargo.toml  Enclave.edl  Xargo.toml
enclave/src/: lib.rs
server/app/: Cargo.toml  build.rs
server/app/src/: main.rs
server/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile
server/enclave/src/: auth.rs  lib.rs  rsa.rs  test.rs
