[package]
name = "sampleenclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "sampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_tse     = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
sgx_rand_derive = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize_derive = { git = "https://github.com/apache/teaclave-sgx-sdk.git"}
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_cbor = { git = "https://github.com/mesalock-linux/cbor-sgx" }
chrono      = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki      = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64      = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna       = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint  = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec     = { version = "*", default-features = false}
httparse    = { version = "1.3.2", default-features=false }
itertools   = { version = "0.8" , default-features = false, features = []}
rustls      = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_align_struct_attribute = { path = "../deps/rust-sgx-sdk/sgx_align_struct_attribute" }
sgx_alloc = { path = "../deps/rust-sgx-sdk/sgx_alloc" }
sgx_backtrace = { path = "../deps/rust-sgx-sdk/sgx_backtrace" }
sgx_backtrace_sys = { path = "../deps/rust-sgx-sdk/sgx_backtrace_sys" }
sgx_build_helper = { path = "../deps/rust-sgx-sdk/sgx_build_helper" }
sgx_cov = { path = "../deps/rust-sgx-sdk/sgx_cov" }
sgx_crypto_helper = { path = "../deps/rust-sgx-sdk/sgx_crypto_helper" }
sgx_demangle = { path = "../deps/rust-sgx-sdk/sgx_demangle" }
sgx_libc = { path = "../deps/rust-sgx-sdk/sgx_libc" }
sgx_no_tstd = { path = "../deps/rust-sgx-sdk/sgx_no_tstd" }
sgx_rand = { path = "../deps/rust-sgx-sdk/sgx_rand" }
sgx_rand_derive = { path = "../deps/rust-sgx-sdk/sgx_rand_derive" }
sgx_serialize = { path = "../deps/rust-sgx-sdk/sgx_serialize" }
sgx_serialize_derive = { path = "../deps/rust-sgx-sdk/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../deps/rust-sgx-sdk/sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../deps/rust-sgx-sdk/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../deps/rust-sgx-sdk/sgx_tcrypto_helper" }
sgx_tdh = { path = "../deps/rust-sgx-sdk/sgx_tdh" }
sgx_tkey_exchange = { path = "../deps/rust-sgx-sdk/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../deps/rust-sgx-sdk/sgx_tprotected_fs" }
sgx_trts = { path = "../deps/rust-sgx-sdk/sgx_trts" }
sgx_tse = { path = "../deps/rust-sgx-sdk/sgx_tse" }
sgx_tseal = { path = "../deps/rust-sgx-sdk/sgx_tseal" }
sgx_tstd = { path = "../deps/rust-sgx-sdk/sgx_tstd" }
sgx_tunittest = { path = "../deps/rust-sgx-sdk/sgx_tunittest" }
sgx_types = { path = "../deps/rust-sgx-sdk/sgx_types" }
#sgx_ucrypto = { path = "../deps/rust-sgx-sdk/sgx_ucrypto" }
sgx_unwind = { path = "../deps/rust-sgx-sdk/sgx_unwind" }
#sgx_urts = { path = "../deps/rust-sgx-sdk/sgx_urts" }
