[package]
name = "sampleenclave"
version = "1.0.0"
authors = ["Guozhang He <jxgzh@qq.com>"]
homepage = "https://github.com/inclavare-containers/confidential-token-broker"
repository = "https://github.com/inclavare-containers/confidential-token-broker"

[lib]
name = "sampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tseal = { path = "../deps/rust-sgx-sdk/sgx_tseal" }
sgx_rand = { path = "../deps/rust-sgx-sdk/sgx_rand" }
sgx_types = { path = "../deps/rust-sgx-sdk/sgx_types" }
sgx_trts = { path = "../deps/rust-sgx-sdk/sgx_trts" }
sgx_tstd = { path = "../deps/rust-sgx-sdk/sgx_tstd" }
sgx_tcrypto = { path = "../deps/rust-sgx-sdk/sgx_tcrypto" }
sgx_tse = { path = "../deps/rust-sgx-sdk/sgx_tse" }
sgx_serialize = { path = "../deps/rust-sgx-sdk/sgx_serialize" }

[dependencies]
sgx_rand_derive = { path = "../deps/rust-sgx-sdk/sgx_rand_derive" }
sgx_serialize_derive = { path = "../deps/rust-sgx-sdk/sgx_serialize_derive" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_cbor = { git = "https://github.com/mesalock-linux/cbor-sgx" }
chrono      = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki      = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64      = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna       = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint  = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec     = { version = "*", default-features = false}
httparse    = { version = "1.3.2", default-features=false }
itertools   = { version = "0.8" , default-features = false, features = []}
rustls      = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_tstd = { path = "../deps/rust-sgx-sdk/sgx_tstd" }